# plexus-mono

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.claude/skills/mono/: SKILL.md
.hyperforge/: config.toml
docs/architecture/: 16672717341950767615_provider-extraction-and-foss-hardening.md  16673150175942673663_claude-code-integration.md  16673278998284554495_nspanel-hover-events.md
mono-tray/: Makefile  README.md  bun.lockb  package.json  playwright.config.ts  synapse.config.json  tsconfig.json
mono-tray/generated-substrate/: .codegen-metadata.json  index.ts  ir.json  types.ts
mono-tray/generated-substrate/claudecode/: client.ts  types.ts
mono-tray/generated-substrate/cone/: types.ts
mono-tray/src/: app.ts  index.html  style.css
mono-tray/src-tauri/: Cargo.toml  tauri.conf.json
mono-tray/src-tauri/capabilities/: default.json
mono-tray/src-tauri/src/: main.rs
mono-tray/tests/: screenshots.spec.ts
plans/STRM/: STRM-1.md  STRM-2.md  STRM-3.md  STRM-4.md  STRM-5.md  STRM-6.md
src/: audio_server.rs  client.rs  hub.rs  lib.rs  player.rs  player_hub.rs  playlist.rs  provider.rs  sanity.rs  server.rs  storage.rs  types.rs
