[package]
name = "plexus-mono"
version = "0.3.0"
edition = "2021"
description = "Monochrome music API Plexus RPC activation — search, metadata, lyrics, and recommendations"
license = "MIT"

[lib]
name = "plexus_mono"
path = "src/lib.rs"

[[bin]]
name = "plexus-mono"
path = "src/bin/plexus_mono.rs"

[dependencies]
# Plexus RPC framework
plexus-core = "0.3.0"
plexus-macros = "0.3.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-stream = "0.3"
futures = "0.3"

# Serialization + schema
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1.1", features = ["derive"] }

# Required by plexus-macros generated code
async-trait = "0.1"
jsonrpsee = { version = "0.26", features = ["server", "macros"] }
uuid = { version = "1.6", features = ["v4", "v5"] }

# HTTP client for Monochrome API
reqwest = { version = "0.13", features = ["json", "stream"] }

# Base64 decoding for stream manifests
base64 = "0.22"

# Audio playback
rodio = { version = "0.22", default-features = false, features = ["symphonia-all", "playback"] }
stream-download = { version = "0.24", features = ["reqwest"] }

# OS media controls (play/pause keys, Now Playing widget)
souvlaki = "0.8"

# Home directory resolution
dirs = "6"

# Logging
tracing = "0.1"

# Standalone server
plexus-transport = "0.1.0"
clap = { version = "4", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = "0.4"
anyhow = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# HTTP audio proxy for client-side failover
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
