[package]
name = "plexus-music"
version = "0.3.0"
edition = "2021"
description = "Generic music player library — provider traits, playback engine, queue, playlists, and RPC server"
license = "MIT"
authors = ["Juggernaut Labs"]
repository = "https://github.com/juggernautlabs/plexus-music"
homepage = "https://github.com/juggernautlabs/plexus-music"
readme = "README.md"
keywords = ["music", "player", "streaming", "rpc", "plexus"]
categories = ["multimedia::audio", "network-programming"]

[lib]
name = "plexus_music"
path = "src/lib.rs"

[dependencies]
# Plexus RPC framework
plexus-core = "0.3.0"
plexus-macros = "0.3.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-stream = "0.3"
futures = "0.3"

# Serialization + schema
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1.1", features = ["derive"] }

# Required by plexus-macros generated code
async-trait = "0.1"
jsonrpsee = { version = "0.26", features = ["server", "macros"] }
uuid = { version = "1.6", features = ["v4", "v5"] }

# HTTP client (needed by audio_server proxy)
reqwest = { version = "0.13", features = ["json", "stream"] }

# Audio playback
rodio = { version = "0.22", default-features = false, features = ["symphonia-all", "playback"] }
stream-download = { version = "0.24", features = ["reqwest"] }

# OS media controls (play/pause keys, Now Playing widget)
souvlaki = "0.8"

# Home directory resolution
dirs = "6"

# Logging
tracing = "0.1"

# Server infrastructure
plexus-transport = "0.1.0"
anyhow = "1"
chrono = "0.4"

# SQLite storage
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# Shuffle mode
rand = "0.9"

# HTTP audio proxy for client-side failover
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# Tracing (needed by server.rs)
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
# Too noisy for this codebase
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
struct_excessive_bools = "allow"
doc_markdown = "allow"
cast_possible_wrap = "allow"
